--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- Primary Meta Tags -->
 <title>1001TOTO : Platform Hiburan Online Terbaik Untuk Keluarga </title>
 <meta content="1001TOTO : Platform Hiburan Online Terbaik Untuk Keluarga " name="title"/>
-<meta content="1001TOTO hadir sebagai agen togel online terpercaya dengan pasaran resmi lengkap, keamanan modern, transaksi cepat, dan layanan support 24 jam. Main lebih nyaman, stabil, dan pasti dibayar." name="description"/>
+<meta content="1001TOTO adalah platform hiburan online terbaik untuk keluarga dan dapat di mainkan di mana saja dan kapan saja dengan akses yang mudah dan tampilan sederhana dapat memudahkan anda bermain." name="description"/>
 <meta content="1001TOTO, togel online, situs togel, agen togel, judi togel, bandar togel, togel terpercaya, live draw, togel singapore, togel hongkong, toto online, pasaran togel, daftar togel" name="keywords"/>
 <meta content="1001TOTO Team" name="author"/>
 <meta content="index, follow" name="robots"/>
@@ -21,13 +21,13 @@
 <meta content="website" property="og:type"/>
 <meta content="https://github.com/Linkdaftarloginresmi/1001toto" property="og:url"/>
 <meta content="1001TOTO : Platform Hiburan Online Terbaik Untuk Keluarga " property="og:title"/>
-<meta content="1001TOTO hadir sebagai agen togel online terpercaya dengan pasaran resmi lengkap, keamanan modern, transaksi cepat, dan layanan support 24 jam. Main lebih nyaman, stabil, dan pasti dibayar." property="og:description"/>
+<meta content="1001TOTO adalah platform hiburan online terbaik untuk keluarga dan dapat di mainkan di mana saja dan kapan saja dengan akses yang mudah dan tampilan sederhana dapat memudahkan anda bermain." property="og:description"/>
 <meta content="https://ik.imagekit.io/nizt/icon1001toto.png?updatedAt=1752662087450" property="og:image"/>
 <!-- Twitter -->
 <meta content="summary_large_image" name="twitter:card"/>
 <meta content="https://github.com/Linkdaftarloginresmi/1001toto" name="twitter:url"/>
 <meta content="1001TOTO : Platform Hiburan Online Terbaik Untuk Keluarga " name="twitter:title"/>
-<meta content="1001TOTO hadir sebagai agen togel online terpercaya dengan pasaran resmi lengkap, keamanan modern, transaksi cepat, dan layanan support 24 jam. Main lebih nyaman, stabil, dan pasti dibayar." name="twitter:description"/>
+<meta content="1001TOTO adalah platform hiburan online terbaik untuk keluarga dan dapat di mainkan di mana saja dan kapan saja dengan akses yang mudah dan tampilan sederhana dapat memudahkan anda bermain." name="twitter:description"/>
 <meta content="https://ik.imagekit.io/nizt/icon1001toto.png?updatedAt=1752662087450" name="twitter:image"/>
 <!-- Favicon -->
 <link href="https://ik.imagekit.io/nizt/icon1001toto.png?updatedAt=1752662087450" rel="icon" type="image/png"/>
@@ -53,7 +53,7 @@
     "name": "1001TOTO — Agen Togel Online Terpercaya",
     "url": "https://github.com/Linkdaftarloginresmi/1001toto",
     "inLanguage": "id",
-    "description": "1001TOTO adalah agen togel online terpercaya dengan pasaran resmi, keamanan modern, transaksi cepat, dan support 24 jam.",
+    "description": "1001TOTO adalah platform hiburan online terbaik untuk keluarga dan dapat di mainkan di mana saja dan kapan saja dengan akses yang mudah dan tampilan sederhana dapat memudahkan anda bermain.",
     "isPartOf": {
       "@type": "WebSite",
       "url": "https://github.com/Linkdaftarloginresmi/1001toto"
@@ -789,3 +789,4 @@ input, select, textarea {
 </script>
 </body>
 </html>
+
