--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <meta content="id" name="language"/>
 <meta content="7 days" name="revisit-after"/>
 <meta name="google-site-verification" content="3DwZXEgAD3bPAUlYDDYYDd0B-_qCIM-c-OW0wVFzIgg" />
+<meta name="google-site-verification" content="3DwZXEgAD3bPAUlYDDYYDd0B-_qCIM-c-OW0wVFzIgg" />  
 <!-- Open Graph / Facebook -->
 <meta content="website" property="og:type"/>
 <meta content="https://github.com/Linkdaftarloginresmi/1001toto" property="og:url"/>
@@ -789,4 +790,5 @@ input, select, textarea {
 </script>
 </body>
 </html>
+
 
